fixing hover state on mobile

--- a/index.css
+++ b/index.css
@@ -3,13 +3,11 @@
   padding: 0;
   box-sizing: inherit;
 }
-
 html {
   box-sizing: border-box;
   font-size: 62.5%; /* 10px/16px = 62.5% -> 1rem = 10px; */
   color: #fff;
 }
-
 body {
   font-family: "Lato", sans-serif;
   font-weight: 300;
@@ -22,27 +20,19 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
 }
-
-
-
 .navigation {
   display: flex;
   justify-content: space-between;
   margin: 1rem;
 }
-
-
 .navigation__items {
   display: flex;
   width: 40rem;
   justify-content: space-evenly;
 }
-
-
 .navigation__item {
   list-style-type: none;
 }
-
 .navigation__item a {
   text-decoration: none;
   font-size: 2rem;
@@ -51,16 +41,6 @@ body {
   text-transform: uppercase;
 }
 
-.navigation__item a:hover,
-.navigation__item a:active
- {
-    color: rgb(178, 176, 176);
-    border-bottom: 1px solid #fff;
-    padding-bottom: 1rem;
-    transition: all .5s;
-}
-
-
 .heading {
   height: 100vh;
   display: flex;
@@ -68,7 +48,6 @@ body {
   align-items: center;
   flex-direction: column;
 }
-
 
 .heading-1 {
   font-size: 7rem;
@@ -79,42 +58,47 @@ body {
   font-style: italic;
 }
 
-
 @media only screen and (max-width: 480px) {
-    body {
-        background-attachment: fixed;
-    }
-
-    .navigation {
-        
-        flex-direction: column;
-        align-items: center;
-        
-    }
-    .heading-2{
-        align-self: center;
-        
-    }
-    .navigation__items{
-        flex-direction: column;
-        align-items: center;
-       
-    }
-    .navigation__item{
-        margin-top: 1rem;
-    }
-
-    .heading{
-        text-align: center;
-    }
-    .heading-1 {
-        font-size: 5rem;
-    }
-
-.navigation__item a:hover,
-.navigation__item a:active
- {
-    color: rgb(178, 176, 176);
-    
-}
+  body {
+    background-attachment: fixed;
   }
+
+  .navigation {
+    flex-direction: column;
+    align-items: center;
+  }
+  .heading-2 {
+    align-self: center;
+  }
+  .navigation__items {
+    flex-direction: column;
+    align-items: center;
+  }
+  .navigation__item {
+    margin-top: 1rem;
+  }
+  .heading {
+    text-align: center;
+  }
+  .heading-1 {
+    font-size: 5rem;
+  }
+  
+}
+
+@media (hover: hover) {
+.navigation__item a:hover,
+.navigation__item a:active {
+  color: rgb(178, 176, 176);
+  border-bottom: 1px solid #fff;
+  padding-bottom: 1rem;
+  transition: all 0.5s;
+}
+}
+@media (hover: none) {
+.navigation__item a:hover,
+.navigation__item a:active {
+  color: inherit;
+
+}
+}
